[gd_scene load_steps=7 format=3 uid="uid://di8w1a601aass"]

[ext_resource type="Theme" uid="uid://d31rns0bis8jm" path="res://Menu_Theme.tres" id="1_nrrgv"]
[ext_resource type="Script" path="res://World/mainmenu.gd" id="1_ruhbh"]
[ext_resource type="PackedScene" uid="uid://dwd8ry3kcc7gm" path="res://Projectiles/bubble_particles.tscn" id="2_sjy2v"]
[ext_resource type="Theme" uid="uid://q2pxe47w6snq" path="res://MainMenu.tres" id="4_lar54"]
[ext_resource type="AudioStream" uid="uid://drjri0yg2yg70" path="res://Assets/startgame.ogg" id="5_kpmwu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x828l"]

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_ruhbh")

[node name="Panel" type="Panel" parent="."]
offset_right = 1000.0
offset_bottom = 720.0
theme = ExtResource("1_nrrgv")
theme_override_styles/panel = SubResource("StyleBoxEmpty_x828l")

[node name="BubbleParticles" parent="Panel" instance=ExtResource("2_sjy2v")]
texture_filter = 1
position = Vector2(500, 800)
amount = 8
lifetime = 8.0
randomness = 0.0
lifetime_randomness = 0.0
emission_rect_extents = Vector2(500, 4)
spread = 3.0
gravity = Vector2(0, -10)
initial_velocity_min = 200.0
initial_velocity_max = 220.0
angular_velocity_min = 5.0
linear_accel_min = 0.0
angle_min = -180.0
angle_max = 180.0
color_ramp = null

[node name="Title" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 16.0
offset_right = 968.0
offset_bottom = 132.0
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center][color=dark_red]Acid[/color] [color=deepskyblue]Base[/color][/center]"

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -71.0
offset_right = 165.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_lar54")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="login" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Login"

[node name="play" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Game"

[node name="Tutorial" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start Tutorial"

[node name="Credits" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "View Scores"

[node name="logout" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Logout"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(68.6644, 101.231)
stream = ExtResource("5_kpmwu")
autoplay = true

[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/logout" to="." method="_logout"]
